--- a/bollati/src/app/globals.scss
+++ b/bollati/src/app/globals.scss
@@ -10,6 +10,7 @@ body {
   overflow-x: hidden;
   font-family: var(--font-aptos), Calibri, sans-serif;
   background-color: #f7f7f7;
+  text-align: justify;
 }
 
 .ba-section {
